--- a/Sovellus/build.gradle
+++ b/Sovellus/build.gradle
@@ -1,12 +1,19 @@
-apply plugin: 'java'
-apply plugin: 'jacoco'
-apply plugin: 'application'
+plugins {
+  id 'java'
+  id 'jacoco'
+  id 'application'
+  id 'org.openjfx.javafxplugin' version '0.0.8'
+}
 
-
-mainClassName = 'main.App'
+mainClassName = 'ui.App'
 
 repositories {
     jcenter()
+}
+
+javafx {
+    version = "14"
+    modules = [ 'javafx.controls' ]
 }
 
 dependencies {
