--- a/Sovellus/build.gradle
+++ b/Sovellus/build.gradle
@@ -3,6 +3,11 @@ plugins {
   id 'jacoco'
   id 'application'
   id 'org.openjfx.javafxplugin' version '0.0.8'
+  id 'checkstyle'
+}
+
+checkstyle {
+    toolVersion '8.17'
 }
 
 mainClassName = 'ui.App'
@@ -24,6 +29,12 @@ jacocoTestReport {
     reports {
         xml.enabled = true
         html.enabled = true
+    }
+    
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: 'ui/**')
+        }))
     }
 }
 
