--- a/Sovellus/build.gradle
+++ b/Sovellus/build.gradle
@@ -1,16 +1,17 @@
 plugins {
-  id 'java'
-  id 'jacoco'
-  id 'application'
-  id 'org.openjfx.javafxplugin' version '0.0.8'
-  id 'checkstyle'
+    id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'java'
+    id 'jacoco'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'checkstyle'
 }
 
 checkstyle {
     toolVersion '8.17'
 }
 
-mainClassName = 'ui.App'
+mainClassName = 'ui.Main'
 
 repositories {
     jcenter()
@@ -25,6 +26,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'ui.Main'
+    }
+}
+
 jacocoTestReport {
     reports {
         xml.enabled = true
@@ -33,8 +40,8 @@ jacocoTestReport {
     
     afterEvaluate {
         classDirectories.setFrom(files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: 'ui/**')
-        }))
+                    fileTree(dir: it, exclude: 'ui/**')
+                }))
     }
 }
 
